New sql files have been added which are related with clients_performance_ads. This table is extended version of basic_ad. Some columns are missing in basic ads. So that This custom table has been added instead of this table.

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -16,3 +16,4 @@ vars:
     basic_ad: "{{ source('facebook_ads','basic_ad') }}"
     campaign_history: "{{ source('facebook_ads','campaign_history') }}"
     creative_history: "{{ source('facebook_ads','creative_history') }}"
+    client_performance_ads: "{{ source('facebook_ads','client_performance_ads') }}"
